Added support for tags
